--- a/style.css
+++ b/style.css
@@ -92,13 +92,13 @@ footer {
 .bnt {
     text-decoration: none;
     color: black;
+    font-size: 20px;
 }
 
 .bnt2 {
     margin-top: 20px;
     width: 100px;
     height: 35px;
-    padding-top: 7px;
     background-color: orange;
     text-align: center;
     border-radius: 8px;
