--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
 }
 
 .maindiv > h1 {
-    font-size: 45px;
+    font-size: 30px;
 }
 
 @media (max-width:1061px){
@@ -110,6 +110,10 @@ footer {
     background-color: orange;
     text-align: center;
     border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 30px;
 
 }
 
