--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Roboto&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Gemunu+Libre:wght@200&family=Montserrat:wght@200&family=Roboto&display=swap');
+
+
 body {
     font-family: 'Anton', sans-serif;
 }
@@ -27,7 +31,7 @@ header {
     transition: 0.9s;
 }
 
-main {
+.main-index {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -55,7 +59,7 @@ main {
 }
 
 @media (max-width:500px){
-    main {
+    .main-index {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -97,7 +101,7 @@ main {
 }
 
 footer {
-    background-color: black;
+    background-color:black;
     color: white;
     height: 40px;
     text-align: center;
@@ -138,6 +142,33 @@ footer {
 
 }
 
+.main-contato {  
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
+}
 
+
+@media (max-width:1025px) {
+    .main-contato {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    
+.img-contato {
+    text-align: center;
+    display: flex;
+}
+}
+
+.img-contato {
+    text-align: center;
+}
 
 
